generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model User {
  id               String       @id @default(cuid())
  email            String       @unique
  passwordHash     String
  createdAt        DateTime     @default(now())
  updatedAt        DateTime     @updatedAt
  refreshTokenHash String?
  memberships      Membership[]
  tenants          Tenant[]
}

model Tenant {
  id        String       @id @default(cuid())
  name      String
  ownerId   String
  createdAt DateTime     @default(now())
  updatedAt DateTime     @updatedAt
  members   Membership[]
  stores    Store[]
  owner     User         @relation(fields: [ownerId], references: [id])

  subscriptions Subscription[]
}

model Membership {
  id        String     @id @default(cuid())
  tenantId  String
  userId    String
  role      MemberRole @default(PRODUCER)
  createdAt DateTime   @default(now())
  tenant    Tenant     @relation(fields: [tenantId], references: [id])
  user      User       @relation(fields: [userId], references: [id])

  @@unique([tenantId, userId])
}

model Store {
  id           String      @id @default(cuid())
  tenantId     String
  slug         String      @unique
  name         String
  status       StoreStatus @default(DRAFT)
  subdomain    String      @unique
  customDomain String?
  createdAt    DateTime    @default(now())
  updatedAt    DateTime    @updatedAt
  pages        Page[]
  products     Product[]
  tenant       Tenant      @relation(fields: [tenantId], references: [id])
  storeTags    StoreTag[]

  analyticsEvents AnalyticsEvent[]
}

model Page {
  id        String     @id @default(cuid())
  storeId   String
  slug      String
  title     String
  content   Json
  status    PageStatus @default(DRAFT)
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt

  store           Store            @relation(fields: [storeId], references: [id])
  analyticsEvents AnalyticsEvent[]

  @@unique([storeId, slug])
}

model Product {
  id              String           @id @default(cuid())
  storeId         String
  slug            String
  title           String
  description     String?
  priceCents      Int
  currency        String           @default("USD")
  status          ProductStatus    @default(DRAFT)
  media           Json?
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt
  store           Store            @relation(fields: [storeId], references: [id])
  productTags     ProductTag[]
  analyticsEvents AnalyticsEvent[]

  @@unique([storeId, slug])
}

model Tag {
  id          String       @id @default(cuid())
  slug        String       @unique
  name        String
  tier        Int          @default(1)
  flags       Json?
  productTags ProductTag[]
  storeTags   StoreTag[]
}

model StoreTag {
  storeId String
  tagId   String
  store   Store  @relation(fields: [storeId], references: [id])
  tag     Tag    @relation(fields: [tagId], references: [id])

  @@id([storeId, tagId])
}

model ProductTag {
  productId String
  tagId     String
  product   Product @relation(fields: [productId], references: [id])
  tag       Tag     @relation(fields: [tagId], references: [id])

  @@id([productId, tagId])
}

model Plan {
  id        String   @id @default(cuid())
  code      String   @unique // "free" | "starter" | "pro" | "business"
  name      String
  quotas    Json // { maxStores, maxProductsPerStore, maxProductsTotal, maxTagTier }
  features  Json? // future flags: customDomain, analyticsLevel, etc.
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  subscriptions Subscription[]
}

model Subscription {
  id        String             @id @default(cuid())
  tenantId  String             @unique
  planId    String
  status    SubscriptionStatus @default(ACTIVE)
  createdAt DateTime           @default(now())
  updatedAt DateTime           @updatedAt

  tenant Tenant @relation(fields: [tenantId], references: [id])
  plan   Plan   @relation(fields: [planId], references: [id])
}

model AnalyticsEvent {
  id         String             @id @default(cuid())
  type       AnalyticsEventType
  storeId    String?
  productId  String?
  pageId     String?
  viewerHash String? // NEW
  createdAt  DateTime           @default(now())

  store   Store?   @relation(fields: [storeId], references: [id])
  product Product? @relation(fields: [productId], references: [id])
  page    Page?    @relation(fields: [pageId], references: [id])

  // NEW: “same viewer, same target, same day” idempotency key

  idempotencyKey String? @unique

  @@index([type, createdAt])
  @@index([storeId, createdAt])
  @@index([productId, createdAt])
  @@index([pageId, createdAt])
  @@index([viewerHash, createdAt])
}

enum AnalyticsEventType {
  STORE_VIEW
  PRODUCT_VIEW
  PAGE_VIEW
}

enum SubscriptionStatus {
  ACTIVE
  CANCELED
}

enum StoreStatus {
  DRAFT
  PUBLISHED
  SUSPENDED
}

enum ProductStatus {
  DRAFT
  PUBLISHED
}

enum MemberRole {
  PRODUCER
  TENANT_ADMIN
}

enum PageStatus {
  DRAFT
  PUBLISHED
}
